--- a/javascript/src/index.html
+++ b/javascript/src/index.html
@@ -20,9 +20,14 @@
             <h1>Simple Neural Network</h1>
             <h2>Logic Gates</h2>
         </div>
-        <table class="table" id="myTable">
+        <!--<table class="table" id="myTable">
 
-        </table>
+        </table>-->
+        <div id="inputs">
+        </div>
+        <input type="checkbox" id="myCheckbox" name="myCheckbox" value="training">
+        Training
+        <h3 id="output">Neural Network Result: ?</h3>
         <div id="buttons">
         </div>
         <h3 id="mySelected">Selected: AND</h3>
